<resources>
    <string name="app_name">Pexels App</string>
    <string name="lbl_home_screen">Home Screen</string>
    <string name="lbl_bookmarks_screen">Bookmarks Screen</string>
    <string name="lbl_details_screen">Details Screen</string>
    <string name="lbl_search">Search</string>
    <string name="lbl_no_results_found">No results found</string>
    <string name="lbl_image_not_found">Image not found</string>
    <string name="lbl_havent_saved">You haven\'t saved anything yet</string>
    <string name="lbl_explore">Explore</string>
    <string name="lbl_try_again">Try Again</string>
    <string name="err_network_connection">No network available</string>
    <string name="err_poor_internet_connection">Poor Internet connection</string>
    <string name="err_failed_response">An internal server error occurred</string>
    <string name="lbl_download">Download</string>
    <string name="msg_allow_permission">Please allow this permission in application Settings</string>
    <string name="msg_provide_permission">Please provide the required permission</string>
    <string name="msg_successfully_saved">Successfully saved</string>
    <string name="lbl_bookmarks">Bookmarks</string>
</resources>